# claude-code-wrapped

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: fmt.rs  lib.rs  main.rs  report.rs
src/analyzers/: cache.rs  cost.rs  mod.rs  models.rs  recommendations.rs  story.rs
src/readers/: discovery.rs  jsonl.rs  mod.rs  session.rs  wire.rs
src/renderers/: html.rs  html_css.rs  html_slides.rs  markdown.rs  mod.rs  share_card.rs  terminal.rs
src/renderers/terminal/: mod.rs  sections.rs  widgets.rs
tests/: integration_test.rs
