[package]
name = "claude-code-wrapped"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Spotify Wrapped for your Claude Code usage — cost, cache grades, model mix, archetypes, and a shareable card."
repository = "https://github.com/onblueroses/claude-code-wrapped"
homepage = "https://github.com/onblueroses/claude-code-wrapped"
keywords = ["claude", "ai", "analytics", "usage", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ccwrapped"
path = "src/main.rs"

[lib]
name = "ccwrapped"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
glob = { path = "vendor/glob" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termcolor = "1"
